@@ -41,6 +41,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.+'
     testImplementation "org.mockito:mockito-core:5.+"
+    testImplementation "org.mockito:mockito-inline:5.2.0"
     mockitoAgent('org.mockito:mockito-core:5.14.0') {
         transitive = false
     }
@@ -53,6 +54,7 @@ tasks.named('test') {
 tasks {
     test {
         jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
+        jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
     }
 }
 
